--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,10 @@ services:
     env: python
     plan: free
     buildCommand: |
-      chmod +x build.sh
-      ./build.sh
+      pip install --upgrade pip setuptools wheel
+      pip install numpy pandas scikit-learn tensorflow xgboost lightgbm
+      pip install fastapi uvicorn gunicorn pydantic
+      pip install requests pyyaml plotly mlflow
     startCommand: gunicorn src.api.app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
     envVars:
       - key: PYTHON_VERSION
@@ -33,8 +35,8 @@ services:
     env: python
     plan: free
     buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements-ui.txt
+      pip install --upgrade pip setuptools wheel
+      pip install streamlit plotly pandas numpy requests pyyaml
     startCommand: streamlit run src/frontend/app.py --server.port $PORT --server.address 0.0.0.0 --server.headless true
     envVars:
       - key: PYTHON_VERSION
