--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       pip install numpy pandas scikit-learn tensorflow xgboost lightgbm
       pip install fastapi uvicorn gunicorn pydantic
       pip install requests pyyaml plotly mlflow
-    startCommand: uvicorn src.api.app:app --host 0.0.0.0 --port $PORT --workers 1
+    startCommand: uvicorn src.api.app:app --host 0.0.0.0 --port $PORT --workers 1 --log-level debug
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
