--- a/Dockerfile.gcp
+++ b/Dockerfile.gcp
@@ -13,12 +13,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
-COPY requirements-streamlit.txt .
+COPY requirements-gcp.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
-RUN pip install --no-cache-dir -r requirements-streamlit.txt
-RUN pip install --no-cache-dir fastapi uvicorn gunicorn
+RUN pip install --no-cache-dir -r requirements-gcp.txt
 
 # Copy application code
 COPY src/ ./src/
