--- a/Dockerfile.gcp
+++ b/Dockerfile.gcp
@@ -4,12 +4,13 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including curl for healthcheck
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     libhdf5-dev \
     pkg-config \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -31,9 +32,9 @@ ENV PYTHONPATH=/app
 # Expose port (Cloud Run will override this)
 EXPOSE 8080
 
-# Health check
+# Health check (simplified for Cloud Run)
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8080/health || exit 1
 
-# Run the application
+# Run the application with proper Python path
 CMD exec uvicorn src.api.app:app --host 0.0.0.0 --port $PORT --workers 1
