--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,7 +45,7 @@ steps:
         "--port",
         "8080",
         "--set-env-vars",
-        "MLFLOW_TRACKING_URI=sqlite:///mlflow.db,API_HOST=0.0.0.0",
+        "MLFLOW_TRACKING_URI=sqlite:///mlflow.db,API_HOST=0.0.0.0,ALPHA_VANTAGE_API_KEY=${_ALPHA_VANTAGE_API_KEY},POLYGON_API_KEY=${_POLYGON_API_KEY}",
         "--timeout",
         "300",
       ]
@@ -62,3 +62,8 @@ timeout: "1200s"
 options:
   machineType: "E2_HIGHCPU_8"
   logging: CLOUD_LOGGING_ONLY
+
+# Substitutions for API keys (set these in Cloud Build trigger)
+substitutions:
+  _ALPHA_VANTAGE_API_KEY: "YOUR_ALPHA_VANTAGE_API_KEY_HERE"
+  _POLYGON_API_KEY: "YOUR_POLYGON_API_KEY_HERE"
