--- a/Dockerfile.gcp.test
+++ b/Dockerfile.gcp.test
@@ -17,5 +17,5 @@ ENV HOST=0.0.0.0
 # Expose port
 EXPOSE 8080
 
-# Run the simple test API
+# Run the simple test API (shell form for env var expansion)
 CMD uvicorn main:app --host 0.0.0.0 --port $PORT
