--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,13 +2,13 @@
 # This file automatically builds and deploys the API to Cloud Run
 
 steps:
-  # Step 1: Build the Docker image (using test Dockerfile)
+  # Step 1: Build the Docker image (using working API now that container setup is proven)
   - name: "gcr.io/cloud-builders/docker"
     args:
       [
         "build",
         "-f",
-        "Dockerfile.gcp.test",
+        "Dockerfile.gcp.working",
         "-t",
         "gcr.io/$PROJECT_ID/stock-prediction-api:$COMMIT_SHA",
         "-t",
